# TEST-ON-JULES-3

./: .dockerignore  .env.development  .env.example  .env.production  .env.test  .gitignore  .semgrep.yaml  AGENTS.md  ARCHITECTURE.md  CALCULATOR_USAGE.txt  CHANGELOG.md  DOCUMENTATION.md  Dockerfile  MIGRATIONS.md  Makefile  OPERATIONS.md  README.md  RELEASE_NOTES.md  SECURITY.md  app.py  calculator.py  conftest.py  docker-compose.phase1.yml  docker-compose.phase2.yml  docker-compose.test.yml  engine.py  evaluator.py  gui_calculator.py  logic.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  safe_evaluator.py  test_app.py  test_calculator.py  test_frontend.py  test_logic.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yaml  obs-smoke.yml  phase1-ci.yml
INSTRUCTIONS/: AGENT_DOCS_CHECKLIST.md
Learning Docs/: 01_platform_overview.md  02_services_and_modules.md  03_job_lifecycle.md  04_observability_ops.md  05_ci_cd_and_quality.md  06_future_outlook.md  README.md
alembic/: __init__.py  command.py  config.py  script.py
calculator_app/: __init__.py  logging_utils.py  metrics.py  operations.py  rate_limit.py  routes.py
calculator_app/services/: evaluator.py
calculator_app/static/: script.js  style.css
calculator_app/templates/: index.html
calculator_grpc/: __init__.py
calculator_grpc/aio/: __init__.py
celery/: __init__.py  result.py
celery/utils/: __init__.py  log.py
docs/: ARCHITECTURE.md  CHANGE_LOG.md  DOCUMENTATION_MAINTENANCE.md  OPERATIONS.md  ROADMAP.md  SECURITY.md  VERIFY_WORKSTREAM1.md
docs/ADRS/: ADR-0005-symbolic-engine-technology.md  ADR-001.md  ADR-002.md  ADR-003.md  ADR-004-queue-technology.md  ADR-005-queue-governance.md  ADR-005-queue-technology-selection.md  ADR-006-symbolic-engine-technology.md  ADR-007-symbolic-sandboxing.md
docs/adr/: ADR-00X-queue-technology-selection.md
docs/runbooks/: jobs_stuck.md  queue_recovery.md  redis_restore.md  websocket_notifications.md
docs/security/: sandbox-seccomp.md
fastapi/: __init__.py
fastapi/responses/: __init__.py
grafana/dashboards/: calculator-phase2.json
grpc/: __init__.py
grpc/aio/: __init__.py
libs/calculator_core/: README.md  pyproject.toml
libs/calculator_core/src/calculator_core/: __init__.py  allowlist.py  ast_guard.py  complexity.py  sandbox.py
libs/calculator_logic/: README.md  pyproject.toml
libs/calculator_logic/src/calculator_logic/: __init__.py  functions.py
observability/: loki-config.yaml  prometheus.yml  promtail-config.yaml  tempo.yaml
opentelemetry/: __init__.py  context.py  propagate.py  trace.py
opentelemetry/exporter/: __init__.py
prometheus_client/: __init__.py
pydantic/: __init__.py
pydantic_settings/: __init__.py
pytest_asyncio/: __init__.py  plugin.py
redis/: __init__.py
redis/asyncio/: __init__.py
scripts/: autoscale_workers.py  ensure_changelog_updated.py  verify_observability.py
services/common/: __init__.py  grpc.py
services/gateway/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/gateway/aiosqlite/: __init__.py
services/gateway/alembic/: __init__.py  config.py  env.py
services/gateway/alembic/versions/: 20250101000000_initial_tables.py  20250205000001_add_jobs_table.py  20251006000002_phase2_policy_queue.py  20251007000003_add_symbolic_support.py  20251201000003_symbolic_cache_table.py
services/gateway/app/: __init__.py  autoscale.py  cache.py  config.py  database.py  evaluator_client.py  instrumentation.py  jobs.py  main.py  models.py  policy.py  quota.py  rate_limit.py  schemas.py  security.py  symbolic_client.py  task_queue.py  time_utils.py
services/gateway/app/clients/: __init__.py  symbolic.py  symbolic_client.py
services/gateway/app/routing/: __init__.py  symbolic_router.py
services/gateway/app/schemas/: __init__.py  symbolic.py
services/gateway/app/scripts/: __init__.py  seed_api_key.py
services/gateway/celery/: __init__.py  result.py
services/gateway/celery/utils/: __init__.py  log.py
services/gateway/fastapi/: __init__.py  responses.py
services/gateway/opentelemetry/: __init__.py  context.py  propagate.py  trace.py
services/gateway/prometheus_client/: __init__.py
services/gateway/pydantic/: __init__.py
services/gateway/pydantic_settings/: __init__.py
services/gateway/pytest_asyncio/: __init__.py  _plugin.py
services/gateway/redis/: __init__.py
services/gateway/redis/asyncio/: __init__.py
services/gateway/sqlalchemy/: __init__.py  types.py
services/gateway/sqlalchemy/dialects/: __init__.py  postgresql.py
services/gateway/sqlalchemy/ext/: __init__.py
services/gateway/sqlalchemy/ext/asyncio/: __init__.py
services/gateway/sqlalchemy/orm/: __init__.py
services/gateway/starlette/: __init__.py  requests.py
services/gateway/tests/: test_autoscale.py  test_gateway_endpoints.py  test_jobs_logic.py  test_resilience.py
services/gateway/tests/integration/: test_phase2_end_to_end.py
services/protos/: evaluator.proto  evaluator_pb2.py  evaluator_pb2_grpc.py  symbolic_engine.proto  (+2 more)
services/safe_evaluator/: Dockerfile  README.md  pyproject.toml
services/safe_evaluator/app/: __init__.py  allowlist.json  allowlist.py  config.py  observability.py  server.py  service.py
services/symbolic_engine/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/symbolic_engine/app/: __init__.py  cache.py  config.py  main.py  metrics.py  models.py  operations.py  sandbox.py  sandbox_runner.py  schemas.py
services/symbolic_engine/scripts/: start.sh
services/symbolic_engine/tests/: test_api.py  test_main.py  test_operations.py  test_sandbox.py
sqlalchemy/: __init__.py  types.py
src/: app.py  calculator.py  evaluator.py  gui_calculator.py  logic.py
starlette/: requests.py
static/: script.js  style.css
templates/: index.html
tests/: __init__.py  conftest.py  test_app.py  test_ast_guard.py  test_calculator.py  test_cli.py  test_evaluator_pb2.py  test_gui.py  test_logic.py  test_observability.py  test_rate_limit.py  test_safe_evaluator.py  test_safe_evaluator_integration.py  test_sandbox.py
(+45 files in other folders)
