[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "PL", "RUF"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["calculator_app", "calculator", "gui_calculator"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
