[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator-core"
version = "0.1.0"
description = "Sandboxing and AST validation primitives for the calculator platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Calculator Platform Team"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "asteval>=1.0.6",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
