[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator-logic"
version = "0.1.0"
description = "Reusable mathematical functions for the calculator platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Calculator Platform Team"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
