[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator-gateway"
version = "0.1.0"
description = "FastAPI gateway service for the calculator platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Calculator Platform Team"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: FastAPI",
  "Topic :: Internet :: WWW/HTTP :: ASGI :: Application",
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.12.0",
  "redis>=5.0.0",
  "prometheus-client>=0.20.0",
  "prometheus-fastapi-instrumentator>=6.1.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "python-json-logger>=2.0.7",
  "httpx>=0.27.0",
  {path = "../../libs/calculator_core", develop = true},
  {path = "../../libs/calculator_logic", develop = true},
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "respx",
]

[tool.setuptools.packages.find]
where = ["app"]
