[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "calculator-gateway"
version = "0.1.0"
description = "FastAPI gateway service for the calculator platform"
authors = ["Calculator Platform Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
pydantic-settings = "^2.4.0"
sqlalchemy = {version = "^2.0.0", extras = ["asyncio"]}
asyncpg = "^0.29.0"
alembic = "^1.12.0"
redis = "^5.0.0"
prometheus-client = "^0.20.0"
prometheus-fastapi-instrumentator = "^6.1.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
opentelemetry-exporter-otlp-proto-http = "^1.25.0"
python-json-logger = "^2.0.7"
httpx = "^0.27.0"
celery = "^5.3.6"
calculator-core = {path = "../../libs/calculator_core", develop = true}
calculator-logic = {path = "../../libs/calculator_logic", develop = true}

[tool.poetry.group.dev.dependencies]
websockets = "^12.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
respx = "^0.21.1"
ruff = "^0.6.0"
pytest-cov = "^5.0.0"
locust = "^2.20.1"
