[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "calculator-safe-evaluator"
version = "0.1.0"
description = "Sandboxed evaluator microservice"
authors = ["Calculator Platform Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.4.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-grpc = "^0.46b0"
opentelemetry-exporter-otlp-proto-http = "^1.25.0"
python-json-logger = "^2.0.7"
asteval = "^1.0.6"
grpcio = "^1.64.1"
prometheus-client = "^0.20.0"
calculator-core = {path = "../../libs/calculator_core", develop = true}
calculator-logic = {path = "../../libs/calculator_logic", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.6.0"
