[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "symbolic-engine"
version = "0.1.0"
description = "FastAPI microservice for symbolic computation using SymPy"
authors = ["Calculator Platform Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
sympy = "^1.12"
pydantic = "^2.7.0"
pydantic-settings = "^2.4.0"
numba = "^0.60.0"
grpcio = "^1.62.0"
grpcio-tools = "^1.62.0"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.6.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100
