[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "calculator-symbolic-engine"
version = "0.1.0"
description = "Symbolic mathematics microservice providing higher-order operations and code generation"
authors = ["Calculator Platform Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sympy = "^1.13.0"
numpy = "^1.26.0"
numba = "^0.60.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
opentelemetry-exporter-otlp-proto-http = "^1.25.0"
python-json-logger = "^2.0.7"
psutil = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.6.5"
pytest-cov = "^5.0.0"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["app"]
